--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.3.1",
-    "angular-ui-grid": "^3.2.1"
+    "angular-ui-grid": "^3.2.1",
+    "angular-material": "master"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
