--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
-    "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -31,13 +30,16 @@
     "karma": "^1.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "time-grunt": "^1.0.0"
+    "phantomjs-prebuilt": "^2.1.7"
   },
-  "engines": {
+    "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "time-grunt": "^1.4.0"
   }
 }
