--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "^0.3.1",
-    "angular-ui-grid": "^3.2.1"
+    "angular-ui-grid": "^3.2.1",
+    "components-font-awesome": "^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -26,5 +27,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.5.8"
   }
 }
