--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "navbar": "^1.0.1",
     "prettyphoto": "*",
     "flexslider": "^2.6.2",
-    "wow": "WOW#^1.1.2"
+    "wow": "WOW#^1.1.2",
+    "jquery.stellar": "stellar#^0.6.2",
+    "jquery.appear": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
