--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,11 @@
     "flexslider": "^2.6.2",
     "wow": "WOW#^1.1.2",
     "jquery.stellar": "stellar#^0.6.2",
-    "jquery.appear": "*"
+    "jquery.appear": "*",
+    "pixeden-stroke-7-icon": "~1.2.3",
+    "animate.css": "~3.5.2",
+    "jquery.easing": "~1.3.1",
+    "ui-to-top": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
