--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "pixeden-stroke-7-icon": "~1.2.3",
     "animate.css": "~3.5.2",
     "jquery.easing": "~1.3.1",
-    "ui-to-top": "*"
+    "ui-to-top": "*",
+    "angular-ui-tinymce": "latest"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
