--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-ui-tinymce": "latest",
     "jquery-smooth-scroll": "~1.7.2",
     "waypoints": "~4.0.1",
-    "Scroll-To": "*"
+    "Scroll-To": "*",
+    "flexslider": "~2.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
