--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "angular-momentjs": "~0.2.2",
     "rickshaw": "~1.5.1",
     "angular-messages": "1.4.6",
-    "flexslider": "~2.6.2"
+    "flexslider": "~2.6.2",
+    "textAngular": "latest"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
